6. jenkins/volume.yaml
---

apiVersion: v1
kind: Namespace
metadata:
  name: jenkins

---
